--- a/public/partials/bets/bets.html
+++ b/public/partials/bets/bets.html
@@ -1,24 +1,73 @@
+<h3>{{Ctrl.matchName}}</h3>
+<br>
 <div class="row">
-  <h1>{{Ctrl.matchName}}</h1>
-  <table class="table table-striped table-hover">
-    <thead>
-      <tr>
-        <th>User</th>
-        <th>Side</th>
-        <th>Value</th>
-        <th>Size</th>
-      </tr>
-    </thead>
-    <tbody >
-        <tr data-ng-repeat="bet in Ctrl.bets">
-          <td>{{ bet.user_id.username }}</td>
-          <td>{{ bet.side  	          }}</td>
-          <td>{{ bet.value            }}</td>
-          <td>{{ bet.qty              }}</td>
-          <td>
-            <a href="bets/{{match._id}}" class="btn btn-xs btn-default">Fill</a>
-          </td>
-        </tr>
-    </tbody>
-  </table>
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <form class="form-inline">
+                <div class="form-group">
+                    <label for="side">Side</label>
+                    <select class="form-control" name="singleSelect" ng-model="vm.side">
+                      <option value="buy">Buy</option>
+                      <option value="sell">Sell</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="price">Price</label>
+                    <input type="number" class="form-control" id="price" ng-model="vm.price">
+                </div>
+                <div class="form-group">
+                    <label for="size">Size</label>
+                    <input type="number" class="form-control" id="size" ng-model="vm.size">
+                </div>
+                <button type="submit" class="btn btn-default">Place</button>
+            </form>
+        </div>
+    </div>
+</div>
+<br>
+<div class="row">
+    <div class="col-md-6">
+        <a href="" class="btn btn-lg btn-danger">S</a>
+        <table class="table table-striped table-hover">
+            <thead>
+              <tr>
+                <th>User</th>
+                <th>Side</th>
+                <th>Size</th>
+                <th>Value</th>
+              </tr>
+            </thead>
+            <tbody>
+                <tr data-ng-repeat="bet in Ctrl.buyBets">
+                    <td>{{ bet.user_id.username }}</td>
+                    <td>{{ bet.side             }}</td>
+                    <td>{{ bet.qty              }}</td>
+                    <td>{{ bet.value            }}</td>
+                </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div class="col-md-6">
+        <a href="" class="btn btn-lg btn-success">B</a>
+        <table class="table table-striped table-hover">
+            <thead>
+              <tr>
+                <th>Value</th>
+                <th>Size</th>
+                <th>Side</th>
+                <th>User</th>
+              </tr>
+            </thead>
+            <tbody>
+                <tr data-ng-repeat="bet in Ctrl.sellBets">
+                    <td>{{ bet.value            }}</td>
+                    <td>{{ bet.qty              }}</td>
+                    <td>{{ bet.side             }}</td>
+                    <td>{{ bet.user_id.username }}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
