--- a/public/partials/bets/bets.html
+++ b/public/partials/bets/bets.html
@@ -1,73 +1,70 @@
 <h3>{{Ctrl.matchName}}</h3>
 <br>
-<div class="row">
-    <div class="panel panel-default">
-        <div class="panel-body">
-            <form class="form-inline">
-                <div class="form-group">
-                    <label for="side">Side</label>
-                    <select class="form-control" name="singleSelect" ng-model="Ctrl.side">
-                      <option value="buy">Buy</option>
-                      <option value="sell">Sell</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="price">Price</label>
-                    <input type="number" class="form-control" id="price" ng-model="Ctrl.price">
-                </div>
-                <div class="form-group">
-                    <label for="size">Size</label>
-                    <input type="number" class="form-control" id="size" ng-model="Ctrl.size">
-                </div>
-                <button class="btn btn-warning" ng-click="Ctrl.placeBet()">Place</button>
-            </form>
-        </div>
-    </div>
-</div>
 <br>
 <div class="row">
-    <div class="col-md-6">
-        <a href="" class="btn btn-lg btn-danger">S</a>
-        <table class="table table-striped table-hover">
-            <thead>
-              <tr>
-                <th>User</th>
-                <th>Side</th>
-                <th>Size</th>
-                <th>Value</th>
-              </tr>
-            </thead>
-            <tbody>
-                <tr data-ng-repeat="bet in Ctrl.buyBets">
-                    <td>{{ bet.user_id.username }}</td>
-                    <td>{{ bet.side             }}</td>
-                    <td>{{ bet.qty              }}</td>
-                    <td>{{ bet.value            }}</td>
-                </td>
-                </tr>
-            </tbody>
-        </table>
+    <div class="col-md-2">
+      <div class="row">
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <form class="form">
+                    <div class="form-group">
+                        <label for="side">Side</label>
+                        <div class="btn-group" style="margin:5px 0 10px 0;">
+                          <button type="button" class="btn" ng-class="Ctrl.isBuy ? 'btn-primary' : 'btn-default'" ng-click="Ctrl.isBuy = true">B</button>
+                          <button type="button" class="btn" ng-class="Ctrl.isBuy ? 'btn-default' : 'btn-primary'" ng-click="Ctrl.isBuy = false">S</button>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="price">Price: {{Ctrl.price}}</label>
+                        <br>
+                          <button type="button" class="btn btn-success btn-block" ng-click="Ctrl.addPrice(10)">+10</button>
+                          <button type="button" class="btn btn-success btn-block" ng-click="Ctrl.addPrice(1)">+1</button>
+                        <br>
+                          <button type="button" class="btn btn-danger btn-block" ng-click="Ctrl.addPrice(-1)">-1</button>
+                          <button type="button" class="btn btn-danger btn-block" ng-click="Ctrl.addPrice(-10)">-10</button>
+                        
+                        
+                    </div>
+                    <div class="form-group">
+                        <label for="size">Size: {{Ctrl.size}}</label>
+                        <br>
+                          <button type="button" class="btn btn-success btn-block" ng-click="Ctrl.addSize(1)">+1</button>
+                          <button type="button" class="btn btn-danger btn-block" ng-click="Ctrl.addSize(-1)">-1</button>
+                    </div>
+                    <button class="btn btn-warning btn-lg btn-block" ng-click="Ctrl.placeBet()">Place</button>
+                </form>
+            </div>
+        </div>
+      </div>
     </div>
 
-    <div class="col-md-6">
-        <a href="" class="btn btn-lg btn-success">B</a>
-        <table class="table table-striped table-hover">
-            <thead>
-              <tr>
-                <th>Value</th>
-                <th>Size</th>
-                <th>Side</th>
-                <th>User</th>
-              </tr>
-            </thead>
-            <tbody>
-                <tr data-ng-repeat="bet in Ctrl.sellBets">
-                    <td>{{ bet.value            }}</td>
-                    <td>{{ bet.qty              }}</td>
-                    <td>{{ bet.side             }}</td>
-                    <td>{{ bet.user_id.username }}</td>
+    <div class="col-md-10">
+        <div class="row">
+          <div class="col-md-2"><a href="" class="btn btn-lg btn-danger btn-block">S</a></div>
+          <div class="col-md-2 col-md-push-8"><a href="" class="btn btn-lg btn-success btn-block">B</a></div>
+        </div>
+        <br>
+        <div class="table-responsive">
+          <table class="table table-striped table-hover">
+              <thead>
+                <tr>
+                  <th>Size</th>
+                  <th>Value</th>
+                  <th>Value</th>
+                  <th>Size</th>
                 </tr>
-            </tbody>
-        </table>
+              </thead>
+              <tbody>
+
+                  <tr ng-repeat="i in Ctrl.getNumber() track by $index">
+                      <td>{{ Ctrl.buyBets[i].qty              }}</td>
+                      <td>{{ Ctrl.buyBets[i].value            }}</td>
+
+                      <td>{{ Ctrl.sellBets[i].value            }}</td>
+                      <td>{{ Ctrl.sellBets[i].qty              }}</td>
+                  </tr>
+              </tbody>
+          </table>
+        </div>
     </div>
 </div>
