--- a/public/partials/bets/bets.html
+++ b/public/partials/bets/bets.html
@@ -6,7 +6,7 @@
       <div class="row">
         <div class="panel panel-default">
             <div class="panel-body">
-                <form class="form">
+                <form class="form-inline">
                     <div class="form-group">
                         <label for="side">Side</label>
                         <div class="btn-group" style="margin:5px 0 10px 0;">
@@ -16,22 +16,17 @@
                     </div>
                     <div class="form-group">
                         <label for="price">Price: {{Ctrl.price}}</label>
-                        <br>
-                          <button type="button" class="btn btn-success btn-block" ng-click="Ctrl.addPrice(10)">+10</button>
-                          <button type="button" class="btn btn-success btn-block" ng-click="Ctrl.addPrice(1)">+1</button>
-                        <br>
-                          <button type="button" class="btn btn-danger btn-block" ng-click="Ctrl.addPrice(-1)">-1</button>
-                          <button type="button" class="btn btn-danger btn-block" ng-click="Ctrl.addPrice(-10)">-10</button>
-                        
-                        
+                        <button type="button" class="btn btn-success" ng-click="Ctrl.addPrice(10)">+10</button>
+                        <button type="button" class="btn btn-danger" ng-click="Ctrl.addPrice(-10)">-10</button>
+                        <button type="button" class="btn btn-success" ng-click="Ctrl.addPrice(1)">+1</button>
+                        <button type="button" class="btn btn-danger" ng-click="Ctrl.addPrice(-1)">-1</button>
                     </div>
                     <div class="form-group">
                         <label for="size">Size: {{Ctrl.size}}</label>
-                        <br>
-                          <button type="button" class="btn btn-success btn-block" ng-click="Ctrl.addSize(1)">+1</button>
-                          <button type="button" class="btn btn-danger btn-block" ng-click="Ctrl.addSize(-1)">-1</button>
+                        <button type="button" class="btn btn-success" ng-click="Ctrl.addSize(1)">+1</button>
+                        <button type="button" class="btn btn-danger" ng-click="Ctrl.addSize(-1)">-1</button>
                     </div>
-                    <button class="btn btn-warning btn-lg btn-block" ng-click="Ctrl.placeBet()">Place</button>
+                    <button class="btn btn-warning  btn-block" ng-click="Ctrl.placeBet()">Place</button>
                 </form>
             </div>
         </div>
@@ -39,29 +34,32 @@
     </div>
 
     <div class="col-md-10">
-        <div class="row">
-          <div class="col-md-2"><a href="" class="btn btn-lg btn-danger btn-block">S</a></div>
-          <div class="col-md-2 col-md-push-8"><a href="" class="btn btn-lg btn-success btn-block">B</a></div>
-        </div>
         <br>
         <div class="table-responsive">
-          <table class="table table-striped table-hover">
+          <table class="table table-striped table-hover" style="font-size:12px">
               <thead>
                 <tr>
+                  <th>User</th>
                   <th>Size</th>
                   <th>Value</th>
+                  <th></th>
+                  <th></th>
                   <th>Value</th>
                   <th>Size</th>
+                  <th>User</th>
                 </tr>
               </thead>
               <tbody>
 
                   <tr ng-repeat="i in Ctrl.getNumber() track by $index">
+                      <td>{{ Ctrl.buyBets[i].user_id.username              }}</td>
                       <td>{{ Ctrl.buyBets[i].qty              }}</td>
                       <td>{{ Ctrl.buyBets[i].value            }}</td>
-
+                      <td><a href="" class="btn btn-sm btn-primary">S</a></td>
+                      <td><a href="" class="btn btn-sm btn-danger">B</a></td>
                       <td>{{ Ctrl.sellBets[i].value            }}</td>
                       <td>{{ Ctrl.sellBets[i].qty              }}</td>
+                      <td>{{ Ctrl.sellBets[i].user_id.username              }}</td>
                   </tr>
               </tbody>
           </table>
