--- a/public/partials/bets/bets.html
+++ b/public/partials/bets/bets.html
@@ -9,7 +9,7 @@
                 <form class="form">
                     <div class="form-group">
                         <label for="side">Side</label>
-                        <input type="checkbox" name="my-checkbox" data-size='small' data-on-text='B' data-off-text='S' data-off-color="danger" checked>
+                        <input type="checkbox" id="side-checkbox" name="my-checkbox" data-size='small' data-on-text='B' data-off-text='S' data-off-color="danger" checked>
                     </div>
                     <div class="form-group range-slider">
                         <label for="price">Price: {{Ctrl.price}}&nbsp;&nbsp;</label>
